--- a/LITE/skin.ini
+++ b/LITE/skin.ini
@@ -73,7 +73,7 @@ ColumnWidth: 42,42,42,42
 ColumnLineWidth: 0,0,0,0,0
 ColumnSpacing: 8,8,8
 
-HitPosition: 454
+HitPosition: 448
 ScorePosition: 310
 ComboPosition: 270
 
@@ -81,14 +81,14 @@ JudgementLine: 0
 KeysUnderNotes: 1
 
 // keys
-KeyImage0: mania/keys/k
-KeyImage0D: mania/keys/kd
-KeyImage1: mania/keys/k
-KeyImage1D: mania/keys/kd
-KeyImage2: mania/keys/k
-KeyImage2D: mania/keys/kd
-KeyImage3: mania/keys/k
-KeyImage3D: mania/keys/kd
+KeyImage0: mania/keys/key
+KeyImage0D: mania/keys/keydown
+KeyImage1: mania/keys/key
+KeyImage1D: mania/keys/keydown
+KeyImage2: mania/keys/key
+KeyImage2D: mania/keys/keydown
+KeyImage3: mania/keys/key
+KeyImage3D: mania/keys/keydown
 
 // notes
 NoteImage0: mania/notes/note-white
@@ -115,7 +115,7 @@ ColumnWidth: 42,42,42,42,42
 ColumnLineWidth: 0,0,0,0,0,0
 ColumnSpacing: 8,8,8,8
 
-HitPosition: 454
+HitPosition: 448
 ScorePosition: 310
 ComboPosition: 270
 
@@ -123,16 +123,16 @@ JudgementLine: 0
 KeysUnderNotes: 1
 
 // keys
-KeyImage0: mania/keys/k
-KeyImage0D: mania/keys/kd
-KeyImage1: mania/keys/k
-KeyImage1D: mania/keys/kd
-KeyImage2: mania/keys/k
-KeyImage2D: mania/keys/kd
-KeyImage3: mania/keys/k
-KeyImage3D: mania/keys/kd
-KeyImage4: mania/keys/k
-KeyImage4D: mania/keys/kd
+KeyImage0: mania/keys/key
+KeyImage0D: mania/keys/keydown
+KeyImage1: mania/keys/key
+KeyImage1D: mania/keys/keydown
+KeyImage2: mania/keys/key
+KeyImage2D: mania/keys/keydown
+KeyImage3: mania/keys/key
+KeyImage3D: mania/keys/keydown
+KeyImage4: mania/keys/key
+KeyImage4D: mania/keys/keydown
 
 // notes
 NoteImage0: mania/notes/note-white
@@ -163,7 +163,7 @@ ColumnWidth: 42,42,42,42,42,42
 ColumnLineWidth: 0,0,0,0,0,0,0
 ColumnSpacing: 6,6,6,6,6
 
-HitPosition: 454
+HitPosition: 448
 ScorePosition: 310
 ComboPosition: 270
 
@@ -171,18 +171,18 @@ JudgementLine: 0
 KeysUnderNotes: 1
 
 // keys
-KeyImage0: mania/keys/k
-KeyImage0D: mania/keys/kd
-KeyImage1: mania/keys/k
-KeyImage1D: mania/keys/kd
-KeyImage2: mania/keys/k
-KeyImage2D: mania/keys/kd
-KeyImage3: mania/keys/k
-KeyImage3D: mania/keys/kd
-KeyImage4: mania/keys/k
-KeyImage4D: mania/keys/kd
-KeyImage5: mania/keys/k
-KeyImage5D: mania/keys/kd
+KeyImage0: mania/keys/key
+KeyImage0D: mania/keys/keydown
+KeyImage1: mania/keys/key
+KeyImage1D: mania/keys/keydown
+KeyImage2: mania/keys/key
+KeyImage2D: mania/keys/keydown
+KeyImage3: mania/keys/key
+KeyImage3D: mania/keys/keydown
+KeyImage4: mania/keys/key
+KeyImage4D: mania/keys/keydown
+KeyImage5: mania/keys/key
+KeyImage5D: mania/keys/keydown
 
 // notes
 NoteImage0: mania/notes/note-white
@@ -217,7 +217,7 @@ ColumnWidth: 42,42,42,42,42,42,42
 ColumnLineWidth: 0,0,0,0,0,0,0,0
 ColumnSpacing: 6,6,6,6,6,6
 
-HitPosition: 454
+HitPosition: 448
 ScorePosition: 310
 ComboPosition: 270
 
@@ -225,20 +225,20 @@ JudgementLine: 0
 KeysUnderNotes: 1
 
 // keys
-KeyImage0: mania/keys/k
-KeyImage0D: mania/keys/kd
-KeyImage1: mania/keys/k
-KeyImage1D: mania/keys/kd
-KeyImage2: mania/keys/k
-KeyImage2D: mania/keys/kd
-KeyImage3: mania/keys/k
-KeyImage3D: mania/keys/kd
-KeyImage4: mania/keys/k
-KeyImage4D: mania/keys/kd
-KeyImage5: mania/keys/k
-KeyImage5D: mania/keys/kd
-KeyImage6: mania/keys/k
-KeyImage6D: mania/keys/kd
+KeyImage0: mania/keys/key
+KeyImage0D: mania/keys/keydown
+KeyImage1: mania/keys/key
+KeyImage1D: mania/keys/keydown
+KeyImage2: mania/keys/key
+KeyImage2D: mania/keys/keydown
+KeyImage3: mania/keys/key
+KeyImage3D: mania/keys/keydown
+KeyImage4: mania/keys/key
+KeyImage4D: mania/keys/keydown
+KeyImage5: mania/keys/key
+KeyImage5D: mania/keys/keydown
+KeyImage6: mania/keys/key
+KeyImage6D: mania/keys/keydown
 
 // notes
 NoteImage0: mania/notes/note-white
